Updated the readme and privacy file to rename theextension

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,7 @@
     securely. Please review our privacy policy for more information on how we
     collect, use, and protect your data. if you would like to enquire about
     project, please feel free to reach out to us at
-    <a href="mailto:vscodegpt@gmail.com">vscodegpt@gmail.com</a>.
+    <a href="mailto:codecompanion@gmail.com">codecompanion@gmail.com</a>.
 
     <h2>Types of Data Collected</h2>
     <p>
@@ -71,7 +71,7 @@
     <h2>Contact Information</h2>
     <p>
       In case of any queries, please feel free to reach out to us at
-      <a href="mailto:vscodegpt@gmail.com">vscodegpt@gmail.com</a>
+      <a href="mailto:codecompanion@gmail.com">codecompanion@gmail.com</a>
     </p>
   </body>
 </html>
